--- a/SmartShelf.API/appsettings.json
+++ b/SmartShelf.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Port=5432;Database=SmartShelfDb;Username=postgres;Password=451532"
+  }
 }
