--- a/SmartShelf.Application/SmartShelf.Application.csproj
+++ b/SmartShelf.Application/SmartShelf.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\SmartShelf.Domain\SmartShelf.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
