Shelf repository implemented, shelf service refactored

--- a/SmartShelf.Infrastructure/SmartShelf.Infrastructure.csproj
+++ b/SmartShelf.Infrastructure/SmartShelf.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmartShelf.Domain\SmartShelf.Domain.csproj" />
+    <ProjectReference Include="..\SmartShelf.Application\SmartShelf.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
